TEST_PROGRAMS/VALID/05/if_elif_else_rob_brace.go
/* If statements */

package main

func main() {
	x := true
	y := false

	if y {
		//Do nothing
	} else if x {
		println(x)
	} else 
	{
		println(x)
	}
}
