TEST_PROGRAMS/INVALID/05/if_else_rob_brace.go
/* If else stmt with rob brace */

package main

func main() {
	x := true

	if x 
	{
		//Do nothing
	} else {
		println(x)
	}
}
